Fri Nov 10 20:26:01 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/Profile_Timer.cpp: Replaced ACE_OS::perror() with
	  ACE_ERROR macros so that the output can be redirected to the
 	  same place that the ACE logging output is configured to go.
  	  Thanks to Jeff Greif <jgreif@befree.com> for reportin this.
	
Fri Nov 10 17:15:42 2000  Darrell Brunsch  <brunsch@uci.edu>

        * bin/fuzz.pl:

          Made the output look a little closer to MSVC's.

Fri Nov 10 17:08:52 2000  Carlos O'Ryan  <coryan@uci.edu>

        * etc/tao_strategies.doxygen:
          New doxygen configuration file for the TAO_Strategies library.

        * bin/generate_doxygen.pl:
          Add tao_strategies.doxygen to the list.

        * etc/ace_man.doxygen:
          Generate man pages in the man directory instead of doxygen_man.

Fri Nov 10 12:58:53 2000  Darrell Brunsch <brunsch@uci.edu>

        * bin/generate_doxygen.pl:
        * etc/tao_implrepo.doxygen:

          New Implementation Repository documentation.

Fri Nov 10 12:53:28 2000  Carlos O'Ryan  <coryan@uci.edu>

        * bin/auto_compile:
          Format test output so make_pretty.pl can recognize where each
          test starts.

        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/tao.doxygen:
        * etc/tao_dynamicany.doxygen:
        * etc/tao_dynamicinterface.doxygen:
        * etc/tao_esf.doxygen:
        * etc/tao_iormanip.doxygen:
        * etc/tao_iortable.doxygen:
        * etc/tao_portableserver.doxygen:
        * etc/tao_rtevent.doxygen:
          Don't define the macros explicitly, use the config-doxygen.h
          file.
          Must define ACE_RCSID and ACE_UNDEFINED_FUNC properly, so
          doxygen does not get confused.

Fri Nov 10 14:26:41 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * ace/config-sunos5.6.h: The AIO definitions were missing the #if
          !defined guards that are present in the solaris 2.7 config